# orientation-tracker

./: CMakeLists.txt  Makefile  README.md  environment.yml  main.cpp  requirements.txt
core/: Bridge.cpp  Bridge.hpp  Data.hpp  DataProcessor.cpp  DataProcessor.hpp  IMUDataset.cpp  IMUDataset.hpp  ViconDataset.cpp  ViconDataset.hpp  bridge.py
tools/: load_data.py
utils/: Helper.hpp  MPL.hpp
